# mellowmax_softmax

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
mellowmax_softmax/: __init__.py
mellowmax_softmax/algo/: GVI.py  SARSA..py  SARSA.py  __init__.py  gvi.py  reinforce.py  sarsa.py
mellowmax_softmax/envs/: __init__.py  custom_mdp.py  random_mdp.py  simple_mdp.py
mellowmax_softmax/experiment/: custom_mdp.py  lunar_lander.py  random_mdp.py  taxi.py
mellowmax_softmax/function/: __init__.py  boltzmax.py  eps_greedy.py  mellowmax.py
mellowmax_softmax/model/: lunarLanderPolicy.py
mellowmax_softmax/scripts/: lunarLander.py  random_mdp_exp.py  simple_mdp_exp.py  simple_mdp_gvi.py  simple_mdp_sarsa.py  start_experiment.py  taxi_exp.py
mellowmax_softmax/utils/: __init__.py
src/algo/: GVI.py
src/experiment/: __init__.py  custom_mdp.py  lunar_lander.py  random_mdp.py  taxi.py
src/function/: boltzmax.py  mellowmax.py
test/: test_algo.py  test_envs.py  test_function.py
