[tool.poetry]
name = "mellowmax_softmax"
version = "0.1.0"
description = ""
authors = ["newb1er <32424677+newb1er@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
torch = "^1.11.0"
plum-dispatch = "^1.5.9"
gym = "^0.23.1"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"

[tool.poetry.scripts]
start = "mellowmax_softmax.scripts.start_experiment:run_app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"